手机端菜单

--- a/src/style.css
+++ b/src/style.css
@@ -32,3 +32,13 @@ a {
   background-position: top center;
   background-repeat: no-repeat;
 }
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.2s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
